[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["Feelx234 <felix.stamm@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-npy = "0.5"
ndarray = "0.13"
ordered-float = "*" 
bit-vec = "*"